--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,8 @@
     "date-fns": "^2.14.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-native-number-stepper": "0.0.2",
+    "react-numeric-input": "^2.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
   },
