--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,9 @@
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
     "@date-io/moment": "^1.3.13",
+    "@devexpress/dx-react-core": "^2.6.4",
+    "@devexpress/dx-react-scheduler": "^2.6.4",
+    "@devexpress/dx-react-scheduler-material-ui": "^2.6.4",
     "@material-ui/core": "^4.10.2",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/pickers": "^3.2.10",
@@ -12,6 +15,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "date-fns": "^2.14.0",
+    "fontsource-roboto": "^2.1.4",
     "moment": "^2.27.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
