--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,8 @@
     "react-native-number-stepper": "0.0.2",
     "react-numeric-input": "^2.2.3",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-spinners": "^0.9.0"
   },
   "scripts": {
     "start": "react-scripts start",
